--- a/pages/shows.html
+++ b/pages/shows.html
@@ -40,20 +40,50 @@
     <section class="hero">
       <div class="hero__name">
         <h2 class="hero__title">
-          New Release!<br />Listen to my new song on Soundcloud, Spotfy, Deezer
-          and Youtube Music!
+          <p class="hero__title-top">New Release, coming soon!</p>
+          <p>Listen to my music on:</p>
         </h2>
         <p class="hero__top-title">Gui Tavares</p>
       </div>
       <div class="hero__media">
         <iframe
           width="100%"
-          height="450"
+          height="166"
           scrolling="no"
           frameborder="no"
           allow="autoplay"
-          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/426638795&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1943966823&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
         ></iframe>
+        <div
+          style="
+            font-size: 10px;
+            color: #cccccc;
+            line-break: anywhere;
+            word-break: normal;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
+              Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+            font-weight: 100;
+          "
+        >
+          <a
+            href="https://soundcloud.com/guitavares-127051646"
+            title="Gui Tavares"
+            target="_blank"
+            style="color: #cccccc; text-decoration: none"
+            >Gui Tavares</a
+          >
+          ·
+          <a
+            href="https://soundcloud.com/guitavares-127051646/o-samba-e-a-voz"
+            title="O Samba é a voz"
+            target="_blank"
+            style="color: #cccccc; text-decoration: none"
+            >O Samba é a voz</a
+          >
+        </div>
         <div
           style="
             font-size: 10px;
