--- a/index.html
+++ b/index.html
@@ -53,36 +53,44 @@
           </div>
 
           <p class="about__subtitle">
-            Samba e a voz do meu pais, esta em tudo que se diz o mundo precisa
-            te encontrar! Canta, solta a voz para se ouvir, deixa o ceu
-            iluminar, salva o samba que chegar.
+            Samba é a voz do meu país, está em tudo o que se diz. O mundo
+            precisa te encontrar! Canta, solta a voz para se ouvir, deixa o céu
+            iluminar, salva o samba que chegar.&#127925;&#127926;
           </p>
           <p class="about__subtitle about__subtitle--slogan">
             - Song Writter | Singer | Multi intrumentalist | Conductor | Gui
-            Tavares.
+            Tavares: Uma das Faces da Música Brasileira no Cenário
+            Internacional.
           </p>
           <h3 class="about__content-title">Gui Tavares</h3>
           <div class="about__contents">
             <p class="about__content about__content--top">
-              Gui Tavares is a Brazilian songwriter, and music professional
-              based in London who produces and coordinates many of his own
-              projects and shows, as well as working in partnership with other
-              individuals and organizations both in London and around the world.
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
-              animi reiciendis earum. Vitae, asperiores voluptas doloribus,
-              illum aspernatur sequi laboriosam facere deserunt magnam nulla
-              dolore vel laudantium temporibus cupiditate eveniet.
+              Formado em Violão Clássico e Popular, além de Composição e
+              Regência pela UNICAMP, Gui Tavares é uma voz distinta na música
+              brasileira contemporânea. Seu primeiro álbum independente, Noite
+              que Brincou de Lua, lançado em parceria com Edu Passeto, marcou o
+              início de sua trajetória fonográfica e foi relançado mais tarde
+              pela Far Out Records devido ao impacto cultural que alcançou. Após
+              anos no Rio de Janeiro, onde atuou em estúdios, orquestras e
+              programas de TV, Gui mudou-se para Londres em 2004, conquistando
+              espaço em palcos como Jazz Café, Barbican Centre, Cadogan Hall,
+              Southbank Centre e Rich Mix, e apresentando-se ao lado de grandes
+              nomes como Carlos Lyra e Marcos Valle. Ele também participou de
+              uma turnê europeia com a lendária banda Azymuth, ampliando sua
+              conexão com o público internacional.
             </p>
             <p class="about__content">
-              From there, the band has soared, gaining international recognition
-              and ranking in the top 10 on the Poster Charts. New fans
-              immediately fell in love with the band’s original and organic
-              attitude, solidifying their place as one of the hottest and
-              fastest up and coming acts of this century. Fans affectionately
-              refer to themselves as “The Hive” and are drawn to their candid
-              and authentic performances on stage. The Bees Knees are currently
-              recording their second studio album, looking to be released in
-              early 2024.
+              Sua carreira inclui colaborações em álbuns de artistas como
+              Jazzinho e Ed Motta, além de contribuições para duas compilações
+              infantis da gravadora americana Putumayo Records. Gui lidera
+              projetos que celebram a música brasileira, como Clube da Esquina
+              Tribute, Minas Heart of Brazil e o Grupo Vocal Nossa Voz, além de
+              promover palestras e workshops sobre a cultura musical do Brasil.
+              Em 2024, seu tributo ao Clube da Esquina no Jazz Café, com
+              participação especial de Filó Machado, e o concerto em homenagem a
+              Tom Jobim no Buxton International Festival em julho de 2025
+              reafirmam seu papel como uma figura central da música brasileira
+              no cenário global.
             </p>
           </div>
         </div>
@@ -219,22 +227,22 @@
       <div class="footer__info-wrap">
         <div class="footer__info">
           <p class="footer__subtitle">
-            <strong>Bees Knees Management</strong>
+            <strong>Gui Tavares</strong>
           </p>
-          <p>503 Broadway Penthouse,</p>
-          <p>New York, NY 10012, USA</p>
+          <p>London Road, NW10</p>
+          <p>London, United Kingdom</p>
           <a href="mailto:info@thebeesknees.com" class="footer__email"
-            >info@thebeesknees.com</a
+            >info@guitavares.com</a
           >
         </div>
         <div class="footer__info">
           <p class="footer__subtitle">
-            <strong>Limitless Artist Group</strong>
+            <strong>Artist Group</strong>
           </p>
-          <p>Booking Agent for</p>
-          <p>US / South America / Japan</p>
+          <p>Centurion House - Staines</p>
+          <p>TW18 - London, UK</p>
           <a href="mailto:bookings@limitlessag.com" class="footer__email"
-            >bookings@limitlessag.com</a
+            >bookings@guitavares.com</a
           >
         </div>
         <div class="footer__info">
