--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gui Tavares &#127925;&#127926;</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-H6XZ5M51ZB"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-H6XZ5M51ZB");
+    </script>
   </head>
   <body>
     <div id="root"></div>
