fix some issues

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
       gtag("config", "G-H6XZ5M51ZB");
     </script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
